--- a/service/nginx.conf
+++ b/service/nginx.conf
@@ -65,7 +65,7 @@ http {
 
      # Forwarding to the SCL Validator Service container (websockets).
      location /compas-scl-data-service/scl-ws {
-       include /etc/nginx/include/authenticate.include;
+       # include /etc/nginx/include/authenticate.include;
 
        proxy_http_version 1.1;
        proxy_set_header Upgrade           $http_upgrade;
@@ -83,7 +83,7 @@ http {
 
      # Forwarding to the SCL Data Service container.
      location /compas-scl-data-service {
-       include /etc/nginx/include/authenticate.include;
+       # include /etc/nginx/include/authenticate.include;
 
        proxy_set_header X-Real-IP         $remote_addr;
        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
