Updated the nginx config file to fix a bug where the forwarding no longer worked.

--- a/service/nginx.conf
+++ b/service/nginx.conf
@@ -42,7 +42,7 @@ http {
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-Port  $server_port;
 
-       proxy_pass http://openscd/;
+       proxy_pass http://open-scd:8080/;
 
        proxy_set_header Host $http_host;
        proxy_cache_bypass $http_upgrade;
@@ -56,7 +56,7 @@ http {
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-Port  $server_port;
 
-       proxy_pass http://keycloak/;
+       proxy_pass http://keycloak:8080/auth/;
 
        proxy_set_header Host $http_host;
        proxy_cache_bypass $http_upgrade;
